# AudioTagLoader

./: .config  .gitignore  README.md  auset  autag  clear.sh  kid3.sh  load_img.sh  main.py  pyproject.toml  run.sh  tags.txt
audiotagloader/: __init__.py  app.py  cache.py  cli.py  config.py  models.py  output.py  redis.py
cache/: docker-compose.yml  redis.conf
