[project]
name = "audiotagloader"
version = "0.1.0"
description = ""
authors = [
    {name = "Olezhich"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discogs-client (>=2.3.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
